/*
 * Teleport
 * Copyright (C) 2024  Gravitational, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package accessgraph.v1alpha;

option go_package = "github.com/gravitational/teleport/gen/proto/go/accessgraph/v1alpha;accessgraphv1alpha";

// EntraSyncOperation is a request to sync Entra resources
message EntraSyncOperation {}

// EntraResourceList is a request that contains resources to be sync.
message EntraResourceList {
  // resources is a list of entra resources to sync.
  repeated EntraResource resources = 1;
}

// EntraResource represents a Entra resource.
message EntraResource {
  oneof resource {
    // application represents an Entra ID enterprise application.
    EntraApplication application = 1;
  }
}

// EntraApplication represents an Entra ID enterprise application together with its service principal.
message EntraApplication {
  // id is the unique Entra object ID.
  string id = 1;
  // app_id is the application ID.
  string app_id = 2;
  // display_name is a human-friendly application name.
  string display_name = 3;
  // tenant_id is the ID of Entra tenant that this application is under.
  string tenant_id = 4;
  // signing_certificates is a list of SAML signing certificates for this app.
  repeated string signing_certificates = 5;

  // federated_sso_v2 contains payload from the /ApplicationSso/{servicePrincipalId}/FederatedSSOV2 endpoint.
  // It is exposed from the internal plugin cache as an opaque JSON blob.
  string federated_sso_v2 = 6;
}
